Set PHP 7.0 as a base image

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,18 @@
-language: bash
-services: docker
+sudo: required
+
+language: php
+
+services:
+  - docker
+
 
 env:
   - PROJECT_COMMAND=build
   - PROJECT_COMMAND=build-coverage
   - PROJECT_COMMAND=build-56
+
+before_install:
+  - if [[ "$PROJECT_COMMAND" != "build-56" ]]; then docker pull php:7.0-fpm; fi;
 
 script:
   - ./docker.sh build-images
