Get rid of parallel.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,9 @@ env:
   - PROJECT_COMMAND=build-56
 
 before_script:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq parallel
   - env | sort
   - if [[ "$PROJECT_COMMAND" != "build-56" ]]; then docker pull php:7.0-fpm; fi;
-  - ./docker.sh build-images
-  - docker images
+  - if [[ "$PROJECT_COMMAND" == "build-56" ]]; then docker pull php:5.6-fpm; fi;
 
 script:
   - ./docker.sh "${PROJECT_COMMAND}"
