Improved README.md file with related files.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,5 +17,5 @@ php:
 mysql:
   image: mysql:5.7
   environment:
-    MYSQL_ROOT_PASSWORD: ${PROJECT_NAME}
-    MYSQL_DATABASE: ${PROJECT_NAME}
+    MYSQL_ROOT_PASSWORD: ${APP_NAME}
+    MYSQL_DATABASE: ${APP_NAME}
