--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -6,7 +6,7 @@ php:
 
 mysql:
   environment:
-    MYSQL_DATABASE: ${PROJECT_NAME}
+    MYSQL_DATABASE: ${APP_NAME}
   volumes:
     - ./data:/var/lib/mysql
 
@@ -19,7 +19,7 @@ nginx:
   volumes_from:
     - data
   environment:
-    PROJECT_NAME: ${PROJECT_NAME}
+    APP_NAME: ${APP_NAME}
     PROJECT_WEB_DIR: ${PROJECT_WEB_DIR}
     PROJECT_INDEX_FILE: ${PROJECT_INDEX_FILE}
     PROJECT_DEV_INDEX_FILE: ${PROJECT_DEV_INDEX_FILE}
