Removed useles images
Improvement

Removed .project_name file from file structure

Improved README.md file

Fixed chmod issues for entrypoint.sh and docker-php-pecl-install files

Merged conflicts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,10 @@ php:
     - data
   environment:
     SYMFONY_ENV: test
+    ENABLED_XDEBUG: "${ENABLED_XDEBUG}"
 
 mysql:
   image: mysql:5.7
   environment:
-    MYSQL_ROOT_PASSWORD: ${PROJECT_NAME}
-    MYSQL_DATABASE: ${PROJECT_NAME}
+    MYSQL_ROOT_PASSWORD: ${APP_NAME}
+    MYSQL_DATABASE: ${APP_NAME}
