--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -8,12 +8,12 @@ php:
 
 mysql:
   environment:
-    MYSQL_DATABASE: ${APP_NAME}
+    MYSQL_DATABASE: ${PROJECT_NAME}
   volumes:
     - ./data:/var/lib/mysql
 
 nginx:
-  image: "${APP_NAME}:${APP_VERSION}-nginx"
+  image: "${PROJECT_NAME}:${APP_VERSION}-nginx"
   ports:
     - "8000:80"
   links:
