--- a/docker/nginx/php.conf
+++ b/docker/nginx/php.conf
@@ -3,7 +3,7 @@ server {
 
     client_max_body_size 10M;
     client_body_buffer_size 128k;
-    server_name APP_NAME.dev www.APP_NAME.dev ;
+    server_name PROJECT_NAME.dev www.PROJECT_NAME.dev ;
 
 
     root /var/www/PROJECT_WEB_DIR;
