--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ env:
 
 before_script:
   - env | sort
-  - if [[ "$PROJECT_COMMAND" == "build-coverage" ]]; then docker pull php:7.1-fpm; fi;
-  - if [[ "$PROJECT_COMMAND" == "build-71-coverage" ]]; then docker pull php:7.1-fpm; fi;
+  - if [[ "$PROJECT_COMMAND" == "build-coverage" || "$PROJECT_COMMAND" == "build-71-coverage" ]]; then docker pull php:7.1-fpm; fi;
   - if [[ "$PROJECT_COMMAND" == "build-7-coverage" ]]; then docker pull php:7-fpm; fi;
   - if [[ "$PROJECT_COMMAND" == "build-56-coverage" ]]; then docker pull php:5.6-fpm; fi;
 
