--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ php:
     - data
   environment:
     SYMFONY_ENV: test
-    ENABLED_XDEBUG: "${ENABLED_XDEBUG}"
+    PROJECT_XDEBUG_ENABLED: "${PROJECT_XDEBUG_ENABLED}"
 
 mysql:
   image: mysql:5.7
