Removed useles images (#20)
* Removed useles images
Improvement

Removed .project_name file from file structure

Improved README.md file

Fixed chmod issues for entrypoint.sh and docker-php-pecl-install files

Merged conflicts

* Added improvements.

* Added improvements.

* Added .project_name file

* Improved travis and reset environment variable in docker-compose.local.yml file

* Impvoved travis

* Removed useles test in travis

* Improved README.md file

* Improved README.md file

* Changed env variable name to PROJECT_XDEBUG_ENABLED

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,8 +1,10 @@
 php:
+  image: "${IMAGE_VERSION}"
   entrypoint: "php-fpm"
   command: ""
   environment:
     SYMFONY_ENV: dev
+    PROJECT_XDEBUG_ENABLED: ${PROJECT_XDEBUG_ENABLED}
 
 mysql:
   environment:
@@ -11,7 +13,7 @@ mysql:
     - ./data:/var/lib/mysql
 
 nginx:
-  image: "${APP_NAME}:${APP_VERSION}-nginx"
+  image: "${PROJECT_NAME}:${APP_VERSION}-nginx"
   ports:
     - "8000:80"
   links:
