--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ php:
     - data
   environment:
     SYMFONY_ENV: test
+    PROJECT_XDEBUG_ENABLED: "${PROJECT_XDEBUG_ENABLED}"
 
 mysql:
   image: mysql:5.7
