--- a/build.xml
+++ b/build.xml
@@ -1,16 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="demo" default="build">
-    <target name="build"
-            depends="list"
-    />
-
+<project name="demo" default="list">
     <target name="list"
-            unless="list.done"
             description="List file structure">
-        <exec executable="ls">
-            <arg value="-l"/>
-            <arg value="-a"/>
-        </exec>
+        <exec command="ls -la" logoutput="true"/>
 
         <property name="list.done" value="true"/>
     </target>
