--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,7 @@ php:
   volumes_from:
     - data
   environment:
-    SYMFONY_ENV: test
-    PROJECT_XDEBUG_ENABLED: "${PROJECT_XDEBUG_ENABLED}"
+    PROJECT_XDEBUG_ENABLED: ${PROJECT_XDEBUG_ENABLED}
 
 mysql:
   image: mysql:5.7
