Improved docker.sh script.
Got rid of advanced case statement.
Removed useless sleeps.
Updated README.md

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,16 @@ language: bash
 services: docker
 
 env:
-  - PROJECT_COMMAND=build-coverage
-  - PROJECT_COMMAND=build-7-coverage
-  - PROJECT_COMMAND=build-56-coverage
+  - PROJECT_PHP_VERSION=56
+  - PROJECT_PHP_VERSION=70
+  - PROJECT_PHP_VERSION=71
 
 before_script:
   - env | sort
-  - if [[ "$PROJECT_COMMAND" == "build-coverage" || "$PROJECT_COMMAND" == "build-71-coverage" ]]; then docker pull php:7.1-fpm; fi;
-  - if [[ "$PROJECT_COMMAND" == "build-7-coverage" ]]; then docker pull php:7-fpm; fi;
-  - if [[ "$PROJECT_COMMAND" == "build-56-coverage" ]]; then docker pull php:5.6-fpm; fi;
+  - if [[ "PROJECT_PHP_VERSION" == "71" ]]; then docker pull php:7.1-fpm; fi;
+  - if [[ "PROJECT_PHP_VERSION" == "70" ]]; then docker pull php:7.0-fpm; fi;
+  - if [[ "PROJECT_PHP_VERSION" == "56" ]]; then docker pull php:5.6-fpm; fi;
 
 script:
-  - ./docker.sh "${PROJECT_COMMAND}"
+  - ./docker.sh build "${PROJECT_PHP_VERSION}" true
+  - ./docker.sh build "${PROJECT_PHP_VERSION}" false
