--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
     "name": "pgs/demo",
-    "version": "0.0.1",
     "description": "PHP Docker Skeleton",
-    "license": "Prioprietary",
+    "license": "MIT",
     "authors": [
         {
             "name": "Michal Kruczek",
